Nano.Azure.Kubernetes.Gateway/.kubernetes/blackhole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackhole
  namespace: %KUBERNETES_NAMESPACE%
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: blackhole
  template:
    metadata:
      labels:
        app: blackhole
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: blackhole
      nodeSelector:
        nodepool.compute: %KUBERNETES_NODEPOOL_COMPUTE%
        kubernetes.io/os: linux
      containers:
        - name: blackhole
          image: hashicorp/http-echo
          args:
            - "-text="
            - "-listen=:8080"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 25Mi
              cpu: 10m
            limits:
              memory: 50Mi
              cpu: 30m
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 2000
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
