Nano.Azure.Kubernetes.Gateway/.kubernetes/blackhole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackhole-service
  namespace: %KUBERNETES_NAMESPACE%
spec:
  selector:
    app: blackhole
  ports:
    - port: 80
      targetPort: 8080
